--- a/src/components/Logo/logo.css
+++ b/src/components/Logo/logo.css
@@ -1,14 +1,12 @@
-
-
 .logo{
-    margin-top: 44px;
-    margin-bottom: 28px;
+    /* margin-bottom: 12px; */
     color: #FFF;
     font-size: 54px;
-
 }
 
 .logo-text{
+    font-size: 60px;
+    font-style: italic;
     background: linear-gradient(#E18700,#FFD43A);
     background-clip: text;
     -webkit-background-clip: text;
