--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 }
 
 body{
+  margin: 0;
+  padding: 0;
   font-family: sans-serif;
   background: linear-gradient(#232630, #050507);
   min-height: 100vh;
